--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,7 @@ github_username:  piotrlasek
 
 # Build settings
 markdown: kramdown
+
+paginate: 10
+destination: _site/blog
+paginate_path: "/blog/page:num"
