--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Piotr <b>Lasek</b> <div style="font-color: red">abc</div>
+title: Piotr <b>Lasek</b>
 email: piotr.lasek@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
