--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Piotr Lasek
 email: piotr.lasek@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  #Write an awesome description for your new site here. You can edit this
+  #line in _config.yml. It will appear in your document head meta (for
+  #Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://piotrlasek.com" # the base hostname & protocol for your site
 twitter_username: pp_lasek
